--- a/CSS/inner.css
+++ b/CSS/inner.css
@@ -207,7 +207,7 @@ input[type=password] {
 button {
     background-color: #a30000;
     color: black;
-    padding: 1px 1px;
+    padding: 10px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
